# Coding_Interviews

./: .gitignore  206_反转链表.cpp  24_swap_list_node.cpp  CMakeLists.txt  README.md
01_LC/: 001_two-sum.cpp  002_add-two-numbers.cpp  003_longest-substring-without-repeating-characters.cpp  008_string-to-integer-atoi.cpp  015_3-sum.cpp  015_three-sum.cpp  020_vallid-parentheses.cpp  022_generate-parenthese.cpp  036_valid-sudoku.cpp  046_permutations.cpp  051_n-queens.cpp  069_sqrtx.cpp  070-climbing_stairs.cpp  072_edit_distance.cpp  078_subsets.cpp  079-word_search.cpp  084_largest-rectangle-in-histogram.cpp  098_validate-binary-search-tree.cpp  102-binary-tree-level-order-traversal.cpp  104_maximun-depth-of-binary-tree.cpp  111_minimun-depth-of-binary-tree.cpp  1143_longest-common-subsequence.cpp  120_Triangle.cpp  121-best-time-to-buy-and-sell-stock.cpp  122_best-time-to-buy-and-sell-stock-ii.cpp  123_best-time-to-buy-and-sell-stock-iii.cpp  141_Linked_List_Cycle.cpp  152_maximun-product-subarray.cpp  169_majority-element.cpp  191-number-of-1-bits.cpp  200_number-of-islands_岛屿数量.cpp  206_reverse-linked-list.cpp  208_Implement-Trie(Prefix-Tree).cpp  225_implement-stack-using-queues.cpp  231-power_of_two.cpp  232_implement-queue-using-stacks.cpp  234_palindrome-linked-list.cpp  236_Lowest-Common-Ancestor-Of-A-Binary-Tree.cpp  239_sliding_windows_maximunm.cpp  242_Valid-Anagram.cpp  (+11 more)
02_Sword-pointing-to-offer/: 02_面试题_实现Singleton模式  07_面试题_用两个栈实现队列  08_面试题_旋转数组的最小数字  17_面试题_合并两个排序的链表  28_面试题_03_八皇后问题  29_面试题_数组中出现次数超过一半的数字  32_面试题_从1到n整数中1出现的次数  40_面试题_数组中只出现一次的数字  45_面试题_圆圈中最后剩下的数  47_面试题_不用加减乘除法做加法  49_面试题_把字符串转换成整数  53_面试题_正则表达式匹配  59_面试题_对称的二叉树  了解数组和指针的区别  替换空格_字符串的应用  返回值_全局变量_异常三种错误处理方式的优缺点比较  链表_空间效率高  面试题024-二叉搜索树的后序遍历序列  面试题025-二叉树中和为某一值的路径  面试题026_复杂链表的复制  面试题027_二叉搜索树与双向链表  面试题028_00_字符串的排列  面试题031_连续子数组的最大和  面试题034_丑数  面试题035_第一个只出现一次的字符位置  面试题036_数组中的逆序对  面试题037_两个链表的第一个公共结点  面试题038_数字在排序数组中出现的次数  面试题039_二叉树的深度  面试题041_和为S的连续正数序列  面试题042_翻转单词顺序 VS 左旋转字符串  面试题043_n个骰子的点数  面试题046_求1+2+3+...+N  面试题048_不能被继承的类  面试题051_数组中重复的数字  面试题056_链表中环的入口结点  面试题058_二叉树的下一个结点  面试题05_从尾到头打印链表  面试题060_把二叉树打印成多行  面试题061_按之字形顺序打印二叉树  (+11 more)
02_剑指offer/: C_C++_求二维数组的行数或者列数  算法和数据操作_查找排序_QuickSort  面试题028_3_八皇后问题  面试题030_最小的K个数  面试题044_扑克牌的顺子  面试题050_树中两个结点的最低公共祖先  面试题052_构建乘积数组  面试题054_表示数值的字符串  面试题055_字符流中第一个不重复的字符  面试题062_序列化二叉树  面试题064_数据流之中的中位数  面试题16_反转链表  面试题18_判断树的子结构  面试题23-从上往下打印二叉树
03_CodeTop/: 704_binary_search.cpp
04_List/: 03_rearrange_list.c  04_合并两个链表.cpp
(+565 files in other folders)
